stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_ordering_record.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/ordering_record.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × ordering operands are not comparable
   ╭─[tests/fixtures/diagnostics/types/ordering_record.ml:2:7]
 1 │ fn main() {
 2 │   dbg(Point { x: 1 } < Point { x: 2 })
   ·       ───────────────┬───────────────
   ·                      ╰── left side has type `Point`, but right side has type `Point`
 3 │ }
   ╰────
  help: compare i64 values with i64 values or string values with string values
